tests/baselines/reference/parserES5SymbolProperty2.errors.txt
parserES5SymbolProperty2.ts(2,6): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.


==== parserES5SymbolProperty2.ts (1 errors) ====
    interface I {
        [Symbol.unscopables](): string;
         ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    }